Touched up docs, added ‘development’ to main page.

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -175,3 +175,9 @@ pseudoxml:
 	$(SPHINXBUILD) -b pseudoxml $(ALLSPHINXOPTS) $(BUILDDIR)/pseudoxml
 	@echo
 	@echo "Build finished. The pseudo-XML files are in $(BUILDDIR)/pseudoxml."
+
+# Sphinx Autobuild.  See the Prost docs on how to use, or do the following:
+# 	make livehtml
+# 	open http://127.0.0.1:8000
+livehtml:
+	sphinx-autobuild -b html $(ALLSPHINXOPTS) $(BUILDDIR)/html
