--- a/prost.config.example
+++ b/prost.config.example
@@ -87,6 +87,7 @@ species: mmu
 
 # For the genome alignment, we recommend keeping the number of non-3-prime
 # mismatches to '2' (i.e. 5-prime mismatches and "core" mismatches).
+# Required.
 [GenomeAlignment]
 name: genome
 tool: bbmap
@@ -96,6 +97,7 @@ max_non_3p_mismatches: 2
 allow_indels: no
 indelnt_penalty_multiplier: 3
 
+# Required.
 [AnnotationAlignment1]
 type: MirbaseMirAnnotation
 name: matures
@@ -105,6 +107,7 @@ max_3p_mismatches: 0
 max_non_3p_mismatches: 0
 allow_indels: no
 
+# Required.
 [AnnotationAlignment2]
 type: MirbaseHairpinAnnotation
 name: hairpins
@@ -114,6 +117,9 @@ max_3p_mismatches: 0
 max_non_3p_mismatches: 0
 allow_indels: no
 
+# Required. 
+# If you wish, you can use the fake BioMart file found here:
+# https://raw.githubusercontent.com/uoregon-postlethwait/prost/master/fake_biomart_file.fa
 [AnnotationAlignment3]
 type: BiomartOtherRNAAnnotation
 name: other
