Added miRTop columns; now setting aligner memory allocation; tiny bug fix.
The miRTop columns have now been added.
See: https://github.com/miRTop/incubator/blob/master/format/definition.md

bbmapskimmer.sh was incorrectly setting its memory allocation (e.g. -Xmx) too low.
Instead of setting it to about 85% of system memory, it was setting it much lower
(maybe around 30%?).  Prost now allows users to specify maximum memory (either
on the command line or in the config file).  If left unspecified, Prost will
explicitly allocate 85% of system memory for bbmapskimmer.sh.

Now logging stdout / stderr of aligners to help future debugging.

--- a/prost.config.example
+++ b/prost.config.example
@@ -9,6 +9,10 @@ species: mmu
 # The maximum number of threads (processors) to use for various operations.
 # max_threads: 4
 
+# The maximum amount of memory (in GB) to allocate to the aligner.
+# If left unset, Prost will allocate 85% of your system memory.
+# max_memory: 128
+
 # The prefix to use for Prost! output filenames.
 # output_file_prefix: prost_output
 
